--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <!-- Substitua o caminho da imagem para o correto -->
-        <img src="sua-imagem.jpg" alt="Imagem no Canto Superior Esquerdo" class="imagem-canto">
+        <img src="logo.png" class="imagem-canto">
     </div>
 </body>
 </html>
