--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100px; /* Tamanho ajustável da imagem */
+            width: 100%; /* Tamanho ajustável da imagem */
             height: auto; /* Mantém a proporção da imagem */
         }
     </style>
