--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Cabeçalho -->
     <header class="header">
-        <img src="sua-imagem.jpg" alt="Imagem no Canto Superior Esquerdo" class="imagem-canto">
+        <img src="logo.png"  class="imagem-canto">
         <div class="nome">PlaysBox</div>
 
         <!-- Links de navegação no topo -->
