--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <header class="header">
         <!-- Imagem e Nome no canto superior esquerdo -->
         <div class="header-left">
-            <img src="sua-imagem.jpg" alt="Imagem no Canto Superior Esquerdo" class="imagem-canto">
+            <img src="logo.png" class="imagem-canto">
             <div class="nome">PlaysBox</div>
         </div>
 
