--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         .nav-links a {
             color: white;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 20%;
         }
 
         .nav-links a:hover {
