--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             align-items: center;
             justify-content: center;
             position: relative;
-            background-color: #4CAF50; /* Cor do fundo do cabeçalho */
+            background-color: #00ffff; /* Cor do fundo do cabeçalho */
             padding: 10px;
             color: white;
         }
@@ -35,7 +35,7 @@
         }
 
         .imagem-canto {
-            width: 50px; /* Ajuste o tamanho da imagem */
+            width: 100px; /* Ajuste o tamanho da imagem */
             height: auto;
             margin-right: 10px; /* Espaçamento entre a imagem e o nome */
         }
@@ -58,7 +58,7 @@
         .nav-links a {
             color: white;
             text-decoration: none;
-            font-size: 20%;
+            font-size: 18px;
         }
 
         .nav-links a:hover {
