--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             justify-content: center;
             position: relative;
             background-color: #00ffff; /* Cor do fundo do cabeçalho */
-            padding: 10px;
+            padding: 15%;
             color: white;
         }
 
