--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         /* Estilo do cabeçalho */
         .header {
             display: flex;
-            align-items: center;
+            align-items: center; /* Alinha os itens verticalmente no centro */
             justify-content: center;
             position: relative;
             background-color: #00ffff; /* Cor do fundo do cabeçalho */
@@ -26,11 +26,8 @@
 
         /* Estilo para a imagem e nome no canto superior esquerdo */
         .header-left {
-            position: absolute;
-            top: 0;
-            left: 0;
             display: flex;
-            align-items: center;
+            align-items: center; /* Alinha a imagem e o texto verticalmente */
             padding: 10px;
         }
 
