--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         }
 
         .imagem-canto {
-            width: 100px; /* Ajuste o tamanho da imagem */
-            height: auto;
+            height: 1em; /* A altura da imagem é igual ao tamanho da fonte do texto */
+            width: auto; /* A largura é ajustada proporcionalmente */
             margin-right: 10px; /* Espaçamento entre a imagem e o nome */
         }
 
         .nome {
-            font-size: 24px;
+            font-size: 24px; /* Tamanho da fonte */
             font-weight: bold;
         }
 
