--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
         /* Estilo para a imagem e nome no canto superior esquerdo */
         .header-left {
+            position: absolute; /* Posiciona no canto superior esquerdo */
+            top: 0;
+            left: 0;
             display: flex;
             align-items: center; /* Alinha a imagem e o texto verticalmente */
             padding: 10px;
@@ -38,7 +41,7 @@
         }
 
         .nome {
-            font-size: 24px; /* Tamanho da fonte */
+            font-size: 28px; /* Aumentei um pouco o tamanho da fonte */
             font-weight: bold;
         }
 
@@ -61,6 +64,12 @@
         .nav-links a:hover {
             text-decoration: underline;
         }
+
+        /* Ajusta a posição da palavra PlaysBox */
+        .nome-alinhado {
+            position: absolute;
+            left: calc(50% - 100px); /* Move a palavra para a esquerda */
+        }
     </style>
 </head>
 <body>
@@ -79,9 +88,8 @@
             <a href="#">Sorteios</a>
             <a href="#">Comunidade</a>
         </div>
-    </header>
 
-    <!-- Conteúdo adicional da página pode ser adicionado aqui -->
+    </header>
 
 </body>
 </html>
