--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         .imagem-canto {
-            height: 1em; /* A altura da imagem é igual ao tamanho da fonte do texto */
+            height: 100px;
             width: auto; /* A largura é ajustada proporcionalmente */
             margin-right: 10px; /* Espaçamento entre a imagem e o nome */
         }
