--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         /* Ajusta a posição da palavra PlaysBox */
         .nome-alinhado {
             position: absolute;
-            left: calc(50%  100px); /* Move a palavra para a esquerda */
+            left: /* Move a palavra para a esquerda */
         }
     </style>
 </head>
