--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         /* Estilo para os links no topo (Suporte, Sorteios, Comunidade) */
         .nav-links {
             position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
+            top: 10px; /* Distância do topo */
+            left: 50%; /* Posiciona no meio da tela */
+            transform: translateX(-50%); /* Ajusta a posição para centralizar */
             display: flex;
             gap: 20px; /* Espaçamento entre os itens */
         }
@@ -78,7 +78,7 @@
             <div class="nome">PlaysBox</div>
         </div>
 
-        <!-- Links de navegação no topo -->
+        <!-- Links de navegação centralizados no topo -->
         <div class="nav-links">
             <a href="#">Suporte</a>
             <a href="#">Sorteios</a>
