--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         }
 
         .imagem-canto {
-            height: 30px; /* Ajuste de tamanho da imagem */
-            width: auto;
+            height: 100px; /* Ajuste de tamanho da imagem para 100px */
+            width: auto; /* A largura é ajustada proporcionalmente */
             margin-right: 10px; /* Espaço entre a imagem e o nome */
         }
 
