--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             display: flex;
             align-items: center; /* Alinha a imagem e o nome verticalmente */
             position: absolute; /* Coloca a imagem no canto superior esquerdo */
-            left: 20px; /* Distância do lado esquerdo */
+            left: 0; /* Coloca a imagem bem no canto esquerdo */
         }
 
         .imagem-canto {
