--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             position: relative;
         }
 
-        /* Container para a imagem e nome no canto superior esquerdo */
+        /* Container para a imagem, nome e campo de pesquisa no canto superior esquerdo */
         .header-left {
             display: flex;
             align-items: center; /* Alinha a imagem e o nome verticalmente */
@@ -40,6 +40,22 @@
         .nome {
             font-size: 30px; /* Aumento do tamanho da fonte */
             font-weight: bold;
+        }
+
+        /* Estilo para a caixa de pesquisa */
+        .search-box {
+            display: flex;
+            align-items: center;
+            margin-left: 20px; /* Espaçamento entre o nome e a caixa de pesquisa */
+        }
+
+        .search-box input {
+            padding: 8px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            width: 200px;
+            box-sizing: border-box;
         }
 
         /* Links de navegação centralizados */
@@ -66,10 +82,15 @@
 
     <!-- Cabeçalho -->
     <header class="header">
-        <!-- Imagem e Nome no canto superior esquerdo -->
+        <!-- Imagem, Nome e Caixa de Pesquisa no canto superior esquerdo -->
         <div class="header-left">
             <img src="logo.png" class="imagem-canto">
             <div class="nome">PlaysBox</div>
+            
+            <!-- Caixa de Pesquisa -->
+            <div class="search-box">
+                <input type="text" placeholder="Pesquisar...">
+            </div>
         </div>
 
         <!-- Links de navegação centralizados -->
