--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             position: relative;
         }
 
-        /* Container para a imagem, nome e campo de pesquisa no canto superior esquerdo */
+        /* Container para a imagem e nome no canto superior esquerdo */
         .header-left {
             display: flex;
             align-items: center; /* Alinha a imagem e o nome verticalmente */
@@ -42,11 +42,11 @@
             font-weight: bold;
         }
 
-        /* Estilo para a caixa de pesquisa */
+        /* Estilo para a caixa de pesquisa no canto superior direito */
         .search-box {
-            display: flex;
-            align-items: center;
-            margin-left: 20px; /* Espaçamento entre o nome e a caixa de pesquisa */
+            position: absolute;
+            right: 20px; /* Coloca a pesquisa no canto direito */
+            top: 25px; /* Alinha com a parte superior */
         }
 
         .search-box input {
@@ -82,15 +82,15 @@
 
     <!-- Cabeçalho -->
     <header class="header">
-        <!-- Imagem, Nome e Caixa de Pesquisa no canto superior esquerdo -->
+        <!-- Imagem e Nome no canto superior esquerdo -->
         <div class="header-left">
             <img src="logo.png" class="imagem-canto">
             <div class="nome">PlaysBox</div>
-            
-            <!-- Caixa de Pesquisa -->
-            <div class="search-box">
-                <input type="text" placeholder="Pesquisar...">
-            </div>
+        </div>
+
+        <!-- Caixa de Pesquisa no canto superior direito -->
+        <div class="search-box">
+            <input type="text" placeholder="Pesquisar...">
         </div>
 
         <!-- Links de navegação centralizados -->
