--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         /* Estilo para a caixa de pesquisa no canto superior direito */
         .search-box {
             position: absolute;
-            right: 20px; /* Coloca a pesquisa no canto direito */
+            right: 50px; /* Move a caixa de pesquisa um pouco para a esquerda */
             top: 25px; /* Alinha com a parte superior */
         }
 
