--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         .profile-circle {
             position: absolute;
             right: 20px; /* Coloca a aba de perfil a 20px da borda direita */
-            top: 25px; /* Alinha com a parte superior */
+            top: 0; /* Alinha o círculo com o topo */
             width: 60px; /* Aumenta o tamanho do círculo */
             height: 60px; /* Aumenta o tamanho do círculo */
             background-color: #333; /* Cor de fundo do círculo */
