--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             justify-content: center; /* Centraliza todo o conteúdo horizontalmente */
             align-items: center;
             background-color: #00ffff; /* Cor de fundo */
-            padding: 30px;
+            padding: 25px;
             position: relative;
         }
 
@@ -80,16 +80,16 @@
         .profile-circle {
             position: absolute;
             right: 20px; /* Coloca a aba de perfil a 20px da borda direita */
-            top: 25px; /* Alinha o círculo com o topo da navegação */
-            width: 60px; /* Aumenta o tamanho do círculo */
-            height: 60px; /* Aumenta o tamanho do círculo */
+            top: 25px; /* Alinha com a parte superior */
+            width: 40px; /* Tamanho do círculo */
+            height: 40px; /* Tamanho do círculo */
             background-color: #333; /* Cor de fundo do círculo */
             border-radius: 50%; /* Torna o elemento circular */
             display: flex;
             justify-content: center;
             align-items: center;
             color: white;
-            font-size: 24px; /* Tamanho do texto dentro do círculo */
+            font-size: 18px; /* Tamanho do texto dentro do círculo */
             font-weight: bold;
         }
 
