--- a/index.html
+++ b/index.html
@@ -93,6 +93,31 @@
             font-weight: bold;
         }
 
+        /* Estilo da divisão do meio */
+        .middle-section {
+            background-color: #ffffff;
+            padding: 50px;
+            text-align: center;
+            height: 300px; /* Define uma altura para a seção do meio */
+        }
+
+        .middle-section h2 {
+            color: #333;
+        }
+
+        /* Estilo da divisão inferior */
+        .bottom-section {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .bottom-section p {
+            margin: 0;
+            font-size: 16px;
+        }
+
     </style>
 </head>
 <body>
@@ -122,6 +147,17 @@
             <a href="#">Comunidade</a>
         </div>
     </header>
+
+    <!-- Divisão do meio -->
+    <div class="middle-section">
+        <h2>Bem-vindo à PlaysBox!</h2>
+        <p>Explore nossos jogos e divirta-se.</p>
+    </div>
+
+    <!-- Divisão inferior -->
+    <div class="bottom-section">
+        <p>&copy; 2024 PlaysBox. Todos os direitos reservados.</p>
+    </div>
 
 </body>
 </html>
